--- a/produtos.html
+++ b/produtos.html
@@ -16,6 +16,7 @@
                 <li><a href="index.html"><img src="Screenshots/home 1 .png" alt="Home"> Home</a></li>
                 <li><a href="produtos.html"><img src="Screenshots/home 2.png" alt="Produtos"> Produtos</a></li>
                 <li><a href="ofertas.html"><img src="Screenshots/home 3.png" alt="Ofertas"> Ofertas</a></li>
+                <li><a href="formulario.html"><img src="Screenshots/home 3.png" alt="Ofertas">formulario</a></li>
             </ul>
         </nav>
     </header>
@@ -30,6 +31,7 @@
                     <div class="info-produto">
                         <p class="nome-produto">Bolsa reveuse</p>
                         <span class="preco-produto">R$ 300,00</span>
+                        
                         <p class="descricao-produto">Bolsa vermelha de couro com acabamento sofisticado e textura suave.</p>
                         <div class="avaliacao">
                             <span class="estrela">&#9733;&#9733;&#9733;&#9733;&#9733;</span> 5/5
