--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="index.html"><img src="Screenshots/home 1 .png" alt="Home"> Home</a></li>
                 <li><a href="produtos.html"><img src="Screenshots/home 2.png" alt="Produtos"> Produtos</a></li>
                 <li><a href="ofertas.html"><img src="Screenshots/home 3.png" alt="Ofertas"> Ofertas</a></li>
+                <li><a href="formulario.html"><img src="Screenshots/home 3.png" alt="Ofertas">formulario</a></li>
             </ul>
         </nav>
     </header>
