--- a/index.html
+++ b/index.html
@@ -84,6 +84,21 @@
             </div>
         </section>
     </main>
+<!-- Sobre a Loja -->
+<section id="about" class="fade-in-up">
+    <h2>Sobre a Loja</h2>
+    <p>Bem-vindo à Só Importados, onde seu estilo transcende fronteiras! Cada peça que você encontra aqui é uma viagem no tempo, unindo o melhor do streetwear, do vintage e das tendências mais icônicas dos anos 90 e 2000, de todos os cantos do mundo. Nossos produtos exclusivos são para quem busca autenticidade, ousadia e aquele toque de nostalgia que transforma qualquer look.</p>
+    
+    <p>Seja a referência de estilo por onde passar. Conecte-se com influências globais e crie combinações únicas que falam sobre quem você realmente é.</p>
+
+    <p>O passado se reinventa: referências vintage com um toque moderno para quem sabe que moda é mais do que tendência – é atitude.</p>
+
+    <p>Do clássico ao contemporâneo, nossa coleção mistura o melhor dos anos 90 e 2000 com a energia atual, para você arrasar em qualquer época.</p>
+
+    
+
+    <p><strong>Só Importados</strong>: o mundo da moda, ao seu alcance.</p>
+</section>
 
     <footer>
         <p>&copy; 2025 Minha Loja - Todos os direitos reservados.</p>
