--- a/formulario.html
+++ b/formulario.html
@@ -66,18 +66,14 @@
             </select>
 
             <label for="value">Valor:</label>
-            <input type="text" id="value" name="value" class="form-input" required>
+            <input type="number" id="value" name="value" class="form-input" required>
 
             <!-- Botão de Finalizar Cadastro -->
             <button type="submit" class="btn-submit">Finalizar Cadastro</button>
         </form>
     </section>
 
-    <!-- Sobre a Loja -->
-    <section id="about" class="slide-in">
-        <h2>Sobre a Loja</h2>
-        <p>Oferecemos as melhores roupas da moda a preços acessíveis. Venha conferir nossas novidades!</p>
-    </section>
+    
 
     <br><br><br><br><br><br><br><br>
 
