--- a/ofertas.html
+++ b/ofertas.html
@@ -19,84 +19,81 @@
                 <li><a href="formulario.html"><img src="Screenshots/home 3.png" alt="Ofertas">formulario</a></li>
             </ul>
         </nav>
-        
     </header>
-  <header>
-    <h1>Catálogo de Ofertas do dia dos namorados!</h1>
-  </header>
 
-  <div class="catalogo">
-    <div class="produto">
-      <img src="imagens/casal1.jpg" alt="Camisa Estilosa">
-      <h3>Kim Nicole</h3>
-      <button onclick="toggleDetalhes(this)">Ver Mais</button>
-      <div class="detalhes">
-        <p><strong>Preço:</strong> R$ 209,90</p>
-        <p><strong>KIT Casal:</strong> 300,00</p>
-        <p><strong>Descrição:</strong> jaqueta e Calça confortável e estilosa para o dia a dia.</p>
-      </div>
-    </div>
+    <header>
+        <h1>Catálogo de Ofertas do dia dos namorados!</h1>
+    </header>
 
-    <div class="produto">
-      <img src="imagens/casal2.jpg" alt="Calça Jeans">
-      <h3>Bestlady </h3>
-      <button onclick="toggleDetalhes(this)">Ver Mais</button>
-      <div class="detalhes">
-        <p><strong>Preço:</strong> R$ 149,90</p>
-        <p><strong>KIT Casal:</strong> 240,90</p>
-        <p><strong>Descrição:</strong> jaqueta jeans de corte reto, perfeita para qualquer ocasião.</p>
-      </div>
-    </div>
-
-    <div class="produto">
-        <img src="imagens/casal4.jpg" alt="Calça Jeans">
-        <h3>Calça Jeans Benzo</h3>
-        <button onclick="toggleDetalhes(this)">Ver Mais</button>
-        <div class="detalhes">
-          <p><strong>Preço:</strong> R$ 149,90</p>
-          <p><strong>KIT Casal:</strong> 270,99</p>
-          <p><strong>Descrição:</strong> Calça jeans de corte reto, perfeita para qualquer ocasião.</p>
+    <div class="catalogo">
+        <div class="produto">
+            <img src="imagens/casal1.jpg" alt="Camisa Estilosa">
+            <h3>Kim Nicole</h3>
+            <button onclick="toggleDetalhes(this)">Ver Mais</button>
+            <div class="detalhes">
+                <p><strong>Preço:</strong> R$ 209,90</p>
+                <p><strong>KIT Casal:</strong> 300,00</p>
+                <p><strong>Descrição:</strong> Jaqueta e Calça confortável e estilosa para o dia a dia.</p>
+                <!-- Botão de Compra redirecionando para o formulário -->
+                <button class="botao-compra" onclick="window.location.href='formulario.html'">Comprar</button>
+            </div>
         </div>
-      </div>
 
-    <div class="produto">
-      <img src="imagens/casal3.jpg" alt="Sapato Casual">
-      <h3>Moleton Angell</h3>
-      <button onclick="toggleDetalhes(this)">Ver Mais</button>
-      <div class="detalhes">
-        <p><strong>Preço:</strong> R$ 199,90</p>
-        <p><strong>KIT Casal:</strong> 350,98</p>
-        <p><strong>Descrição:</strong> jaqueta para compor looks elegantes e confortáveis.</p>
-      </div>
+        <div class="produto">
+            <img src="imagens/casal2.jpg" alt="Calça Jeans">
+            <h3>Bestlady</h3>
+            <button onclick="toggleDetalhes(this)">Ver Mais</button>
+            <div class="detalhes">
+                <p><strong>Preço:</strong> R$ 149,90</p>
+                <p><strong>KIT Casal:</strong> 240,90</p>
+                <p><strong>Descrição:</strong> Jaqueta jeans de corte reto, perfeita para qualquer ocasião.</p>
+                <!-- Botão de Compra redirecionando para o formulário -->
+                <button class="botao-compra" onclick="window.location.href='formulario.html'">Comprar</button>
+            </div>
+        </div>
+
+        <div class="produto">
+            <img src="imagens/casal4.jpg" alt="Calça Jeans">
+            <h3>Calça Jeans Benzo</h3>
+            <button onclick="toggleDetalhes(this)">Ver Mais</button>
+            <div class="detalhes">
+                <p><strong>Preço:</strong> R$ 149,90</p>
+                <p><strong>KIT Casal:</strong> 270,99</p>
+                <p><strong>Descrição:</strong> Calça jeans de corte reto, perfeita para qualquer ocasião.</p>
+                <!-- Botão de Compra redirecionando para o formulário -->
+                <button class="botao-compra" onclick="window.location.href='formulario.html'">Comprar</button>
+            </div>
+        </div>
+
+        <div class="produto">
+            <img src="imagens/casal3.jpg" alt="Sapato Casual">
+            <h3>Moleton Angell</h3>
+            <button onclick="toggleDetalhes(this)">Ver Mais</button>
+            <div class="detalhes">
+                <p><strong>Preço:</strong> R$ 199,90</p>
+                <p><strong>KIT Casal:</strong> 350,98</p>
+                <p><strong>Descrição:</strong> Jaqueta para compor looks elegantes e confortáveis.</p>
+                <!-- Botão de Compra redirecionando para o formulário -->
+                <button class="botao-compra" onclick="window.location.href='formulario.html'">Comprar</button>
+            </div>
+        </div>
     </div>
-  </div>
 
-  <script>
-    function toggleDetalhes(button) {
-      const produto = button.closest('.produto');
-      produto.classList.toggle('show-details');
-    }
-  </script>
+    <script>
+        function toggleDetalhes(button) {
+            const produto = button.closest('.produto');
+            produto.classList.toggle('show-details');
+        }
+    </script>
 
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-
-  <footer>
-    <p>&copy; 2025 Minha Loja - Todos os direitos reservados.</p>
-    <div class="redes-sociais">
-        <a href="#"><img src="imagens/facebook.png" alt="Facebook"></a>
-        <a href="#"><img src="imagens/instagram.png" alt="Instagram"></a>
-        <a href="#"><img src="imagens/twitter.png" alt="Twitter"></a>
-    </div>
-  </footer>
+    <footer>
+        <p>&copy; 2025 Minha Loja - Todos os direitos reservados.</p>
+        <div class="redes-sociais">
+            <a href="#"><img src="imagens/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="imagens/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="imagens/twitter.png" alt="Twitter"></a>
+        </div>
+    </footer>
 
 </body>
 </html>
